[package]
name = "steam-ticket-generator"
authors = ["NotAndreh"]
version = "1.0.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
dialoguer = "0.11.0"
steamworks-sys = { git = "https://github.com/Noxime/steamworks-rs" }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
